[project]
name = "cross-examination"
dynamic = ["version"]
description = "Push checkpoints to witnesses"
readme = "README.md"

authors = [
    { name = "Florian Larysch", email = "fl@n621.de" }
]
license = "Apache-2.0"

requires-python = ">=3.14"
dependencies = [
    "pynacl>=1.6.2",
    "requests>=2.34.0",
]

[project.scripts]
cross-examination = "cross_examination.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cross_examination/__about__.py"
